--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+/.settings
+/node_modules
+/*.tern-project
+/*.jshintrc
+/*.project
+/*.sublime-project
+/src
